Corrected grammar errors in initial commits.